# trading-agent

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  README.md  package.json  tsconfig.json  turbo.json
.github/workflows/: deploy-convex.yml  deploy-mt5-worker.yml
apps/alpaca-options/: package.json
apps/alpaca-options/src/: index.ts  risk-rules.ts
apps/backend/: .env.example  package.json  tsconfig.json
apps/backend/scripts/: audit-runs.ts  codex-provider-preflight.ts  codex-rollout-audit-export.ts  codex-run-audit-export.ts  control-plane-metrics.ts  migrate-strategy-llm-policies.ts  positions-unowned.ts  provider-identity-preflight.test.ts  provider-identity-preflight.ts  reset-and-import-strategies.d.ts  reset-and-import-strategies.d.ts.map  reset-and-import-strategies.js  reset-and-import-strategies.ts  strategies-add-all.d.ts  strategies-add-all.d.ts.map  strategies-add-all.js  strategies-add-all.ts  strategies-add.d.ts  strategies-add.d.ts.map  strategies-add.js  strategies-add.ts  strategies-delete.d.ts  strategies-diff.js  (+15 more)
apps/dashboard/: .env.example  next.config.d.ts.map  next.config.js  next.config.ts  package.json
apps/mt5/: package.json
apps/mt5-worker/: .env.example  config.py  fail_closed_harness.py  main.py  mt5_client.py  mt5_errors.py  mt5_mappers.py  mt5_mappers_test.py  nonblocking_harness.py  pyproject.toml  session_identity_harness.py  supervisor.py  worker_contracts.py  worker_models.py  worker_runtime.py  worker_test_stubs.py
apps/polymarket/: package.json
(+395 files in other folders)
