[project]
name = "mt5-trading-worker"
version = "0.1.0"
description = "MT5 Python worker -- exposes broker operations via HTTP for the TS orchestrator"
requires-python = ">=3.10"
dependencies = [
    "MetaTrader5>=5.0.4424",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mt5-worker = "main:app"
